Learned how to use wrap for pictures. Added banners. Also, fixed the bug and aligned the menus correctly

--- a/styles.css
+++ b/styles.css
@@ -11,23 +11,7 @@
     display: flex;
     justify-content: center;
   }
-  
-  .menu {
-    border: 1px solid #fff;
-    width: 900px;
-    display: flex;
-    justify-content: space-around;
-  }
 
-  .links {
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  .login {
-    margin-left: 20px;
-  }
-  
   .header-container {
     color: #5995DA;
     background-color: #D6E9FE;
@@ -40,3 +24,40 @@
     height: 300px;
     display: flex;
     justify-content: space-between;
+    align-items: center; 
+  }
+  
+  .menu {
+    width: 900px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  
+
+  .links {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .login {
+    margin-left: 20px;
+  }
+
+  .photo-grid-container {
+    display: flex;
+    justify-content: center;
+  }
+  
+  .photo-grid {
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  
+  .photo-grid-item {
+    border: 1px solid #fff;
+    width: 300px;
+    height: 300px;
+  }
